# back-teste

./: Procfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
MyTrainer/: asgi.py  settings.py  urls.py  wsgi.py
core/: models.py  serializer.py  views.py
core/migrations/: 0001_initial.py  0002_treino.py  0003_atleta_nome.py  0004_alter_treino_linkstrava.py  0005_treino_modalidade.py  0006_modalidade_alter_treino_modalidade.py
