[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["ruben"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
django-rest-framework = "^0.1.0"
django-cors-headers = "^3.13.0"
pillow = "^9.3.0"
djangorestframework = "^3.14.0"
whitenoise = "^6.2.0"
djangorestframework-simplejwt = "^5.2.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
